--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
     <meta name="about" content="Ceng311, assignment1, xhtml" />
   </head>
   <body>
-    <h1>style="color:red;"<i>About Me <i></h1> <!-- Page title -->
+    <h1 style="color:red;"><i>About Me <i></h1> <!-- Page title -->
     <p>My name is<em> Asude dila Açıkgöz </em>,currently a second-year student at Yıldırım Beyazıt University in Ankara, Turkey. <br/>
       My student ID is<u> 21050111049 </u>, and I am studying Computer Engineering.</p>
   </body>
