--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 style="color:red;"><i>About Me <i></h1> <!-- Page title -->
-    <p>My name is<em> Asude dila Açıkgöz </em>,currently a second-year student at Yıldırım Beyazıt University in Ankara, Turkey. <br/>
+    <p>My name is<em> Asude dila Açıkgöz </em>,currently student at Yıldırım Beyazıt University in Ankara, Turkey. <br/>
       My student ID is<u> 21050111049 </u>, and I am studying Computer Engineering.</p>
   </body>
 </html>
