--- a/ceng311_project/gallery.html
+++ b/ceng311_project/gallery.html
@@ -9,11 +9,15 @@
 </head>
 <body>
 
+    <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="logo-container">
+            <!-- Logo Image -->
             <img src="image/logo.jpg" alt="Logo" class="logo">
             <span class="logo-text">Toy Inventory</span>
         </div>
+        
+        <!-- Navigation Links -->
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
@@ -28,7 +32,7 @@
         <h1>Toy Gallery</h1>
         
     </header>
-
+    <!-- Gallery Section -->
     <section class="gallery-container">
         <div class="gallery-item">
             <img src="image/1.jpg" alt="Toy 1">
