--- a/ceng311_project/howto.html
+++ b/ceng311_project/howto.html
@@ -9,11 +9,15 @@
 </head>
 <body>
 
+    <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="logo-container">
+            <!-- Logo Image -->
             <img src="image/logo.jpg" alt="Logo" class="logo">
             <span class="logo-text">Toy Inventory</span>
         </div>
+        
+        <!-- Navigation Links -->
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
@@ -27,6 +31,8 @@
     
     <h1>How To Make Toys</h1>
     <p class="intro">Learn how to create handmade toys for children in need.</p>
+
+    <!-- Toy Instructions Section -->
     <section class="toy-container">
         <div class="toy-item">
             <img src="image/tiger.jpg" alt="toy 1">
