--- a/ceng311_project/index.html
+++ b/ceng311_project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oyuncak Mucidleri</title>
+    <title>Oyuncak Mucitleri</title>
     <link rel="stylesheet" href="style/navbar.css">
     <link rel="stylesheet" href="style/index.css">
 </head>
@@ -25,12 +25,12 @@
         </ul>
     </nav>
 
-    <!-- ANA İÇERİK -->
+    
     <header class="hero">
         <h1>Welcome to Oyuncak Mucidleri</h1>
         <p>Bringing joy to children through handcrafted toys</p>
     </header>
-
+    <!-- INFORMATION ABOUT ACTIVITY SECTION -->
     <section class="info-container">
         <div class="info-box">
             <h2>What We Do</h2>
