--- a/ceng311_project/index.html
+++ b/ceng311_project/index.html
@@ -9,12 +9,15 @@
 </head>
 <body>
 
-    <!-- NAVBAR (Tüm sayfalarda kullanılacak) -->
+    <!-- Navigation Bar (Used across all pages) -->
     <nav class="navbar">
         <div class="logo-container">
+            <!-- Logo Image -->
             <img src="image/logo.jpg" alt="Logo" class="logo">
             <span class="logo-text">Toy Inventory</span>
         </div>
+        
+        <!-- Navigation Links -->
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
