--- a/ceng311_project/index.html
+++ b/ceng311_project/index.html
@@ -30,7 +30,7 @@
 
     
     <header class="hero">
-        <h1>Welcome to Oyuncak Mucidleri</h1>
+        <h1>Welcome to Oyuncak Mucitleri</h1>
         <p>Bringing joy to children through handcrafted toys</p>
     </header>
     <!-- INFORMATION ABOUT ACTIVITY SECTION -->
