--- a/ceng311_project/about.html
+++ b/ceng311_project/about.html
@@ -60,7 +60,10 @@
                 thereby contributing to their overall rehabilitation.</p>
         </div>
         </div>
-
+<!-- Footer -->
+<footer id="footer">
+    <p> 2025 Oyuncak Mucitleri. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
