--- a/ceng311_project/gallery.html
+++ b/ceng311_project/gallery.html
@@ -49,7 +49,10 @@
           <img src="image/23haziran/4.jpg" alt="Toy 4">
         </div>
       </section>
-      
+  <!-- Footer -->
+  <footer id="footer">
+    <p> 2025 Oyuncak Mucitleri. All rights reserved.</p>
+</footer>   
 
 </body>
 </html>
