--- a/ceng311_project/join.html
+++ b/ceng311_project/join.html
@@ -107,7 +107,7 @@
         <div class="input-group">
           <label for="first-name">First Name *</label>
           <input type="text" id="first-name" name="firstName" required />
-          <label for="last-name">Last Name *</label>
+          <label for="last-name">Surname  *</label>
           <input type="text" id="last-name" name="lastName" required />
         </div>
         <label for="email">Email *</label>
