--- a/ceng311_project/gallery.html
+++ b/ceng311_project/gallery.html
@@ -44,9 +44,9 @@
         <h2>23 Haziran</h2>
         <div class="carousel">
           <img src="image/23haziran/1.jpg" alt="Toy 1">
-          <img src="image/23haziran/2.jpg" alt="Toy 2">
+          <img src="image/23haziran/2.JPG" alt="Toy 2">
           <img src="image/23haziran/3.jpg" alt="Toy 3">
-          <img src="image/23haziran/4.jpg" alt="Toy 4">
+          <img src="image/23haziran/4.JPG" alt="Toy 4">
         </div>
       </section>
   <!-- Footer -->
