--- a/ceng311_project/join.html
+++ b/ceng311_project/join.html
@@ -10,7 +10,7 @@
   <!-- jQuery + jQuery UI + Validation -->
   <script src="jquery/jquery-3.6.0.min.js"></script>
   <script src="jquery/jquery-ui.min.js"></script>
-  <script src="jquery/jquery.validate.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
   <script src="scripts/join.js" defer></script>
 </head>
 <body>
