--- a/ceng311_project/join.html
+++ b/ceng311_project/join.html
@@ -37,20 +37,17 @@
 
   <h1>Frequently Asked Questions</h1>
 
-  <div class="faq-container">
-    <div class="faq-item">
-      <button class="faq-question">How do I get involved as a volunteer?<span class="arrow">▼</span></button>
-      <div class="faq-answer">Click the "Sign Up as a Volunteer" button above.</div>
-    </div>
-    <div class="faq-item">
-      <button class="faq-question">What materials are needed?<span class="arrow">▼</span></button>
-      <div class="faq-answer">Fabric, felt, stuffing, thread, and safe paints.</div>
-    </div>
-    <div class="faq-item">
-      <button class="faq-question">How does sponsorship work?<span class="arrow">▼</span></button>
-      <div class="faq-answer">You can support financially or with materials.</div>
-    </div>
+  <div id="faq-accordion">
+    <h3>How do I get involved as a volunteer?</h3>
+    <div><p>You can sign up through the form by clicking the "Sign Up as a Volunteer" button above.</p></div>
+  
+    <h3>What materials are needed for toy making?</h3>
+    <div><p>Commonly used materials include fabric, felt, stuffing, thread, and safe non-toxic paints.</p></div>
+  
+    <h3>How does sponsorship work?</h3>
+    <div><p>Sponsors can support us financially, by donating materials, or by sponsoring events.</p></div>
   </div>
+  
 
   <!-- Volunteer Popup -->
   <div id="volunteer-popup" title="Volunteer Registration" style="display: none;">
