--- a/rodb-proje/index.html
+++ b/rodb-proje/index.html
@@ -6,6 +6,8 @@
     <title>Home | Asude Dila Açıkgöz</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta name="description" content="We examine Asude Dila Açıkgöz's portfolio: her projects, experiences and learning.">
+    <meta name="keywords" content="Asude Dila Açıkgöz, portfolio, software projects, frontend, backend, engineering, internship">
 </head>
 <body>
 
