--- a/rodb-proje/index.html
+++ b/rodb-proje/index.html
@@ -17,7 +17,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="keywords" content="Asude Dila Açıkgöz, portfolio, software projects, frontend, backend, engineering, internship">
 </head>
 <body>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGN6R7NM"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <header>
     <nav class="navbar">
         <div class="nav-container">
