--- a/ceng311_project/howto.html
+++ b/ceng311_project/howto.html
@@ -32,9 +32,9 @@
     </div>
   </section>
 
-  <section>
-    <h2>Today's Weather (Ankara)</h2>
-    <div id="weather-box">Loading weather...</div>
+   <section>
+    <h2>Today's Children's Book Suggestion</h2>
+    <div id="book-box">Loading book data...</div>
   </section>
 
   <div id="popup-overlay" style="display: none;">
